feat: Add Apache Kafka integration for async document processing
This commit adds comprehensive Kafka integration to enable asynchronous
document processing, improving API response times and system scalability.

Major Changes:
- Add Kafka, Zookeeper, and Kafka UI services to docker-compose.yml
- Implement async document processing via Kafka message queue
- Add embedding worker consumer for background processing
- Fix MySQL connection SSL issue (ssl_disabled=True)
- Fix Kafka health check using KafkaAdminClient
- Add search analytics via Kafka events

New Features:
- Async document processing mode (POST /documents?async_mode=true)
- Kafka-based message queue for document embeddings
- Background worker for processing queued documents
- Search analytics tracking via Kafka
- Comprehensive health check endpoint with Kafka status

Infrastructure:
- Kafka 7.4.0 with Zookeeper (not KRaft mode)
- Kafka UI for monitoring and debugging
- Embedding worker service for async processing
- Health checks for all services

Documentation:
- KAFKA_GUIDE.md: Complete Kafka learning guide
- KAFKA_INTEGRATION.md: Integration instructions and troubleshooting
- TECHNICAL_GUIDE.md: Updated with Kafka integration details
- Example scripts for producer/consumer patterns

Bug Fixes:
- MySQL connection: Add ssl_disabled=True for Docker environment
- Kafka health check: Use KafkaAdminClient instead of producer.list_topics()
- Improved error messages in health check endpoint

Files Changed:
- backend/main.py: Add Kafka producer, async mode, search analytics
- backend/worker.py: New async embedding worker (Kafka consumer)
- backend/requirements.txt: Add kafka-python dependency
- docker-compose.yml: Add Kafka, Zookeeper, Kafka UI, embedding worker
- backend/examples/: Producer/consumer example scripts

Breaking Changes: None
Migration: Existing sync mode still works by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,38 @@ services:
       - MYSQL_DATABASE=rag_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9093
     depends_on:
       mysql:
         condition: service_healthy
       redis:
         condition: service_started
+      kafka:
+        condition: service_healthy
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+
+  # Embedding Worker (Kafka Consumer)
+  embedding-worker:
+    build: ./backend
+    container_name: rag-embedding-worker
+    volumes:
+      - ./backend:/app
+    environment:
+      - MYSQL_HOST=mysql
+      - MYSQL_USER=raguser
+      - MYSQL_PASSWORD=ragpassword
+      - MYSQL_DATABASE=rag_db
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9093
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    command: python worker.py
 
   # Jupyter for experimentation
   jupyter:
@@ -64,6 +90,64 @@ services:
       - JUPYTER_ENABLE_LAB=yes
     command: bash -c "pip install pymysql redis langchain openai chromadb && start-notebook.sh"
 
+  # Zookeeper (required for Kafka)
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: rag-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_logs:/var/lib/zookeeper/log
+
+  # Kafka Broker
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: rag-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_LOG_RETENTION_HOURS: 168
+      KAFKA_LOG_SEGMENT_BYTES: 1073741824
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
+
+  # Kafka UI (Web interface for Kafka)
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: rag-kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+      DYNAMIC_CONFIG_ENABLED: 'true'
+
 volumes:
   mysql_data:
   redis_data:
+  zookeeper_data:
+  zookeeper_logs:
+  kafka_data:
